# oop_labs

./: CMakeLists.txt  Lapshov_Konstantin_lb1.docx  Lapshov_Konstantin_lb2.docx  Lapshov_Konstantin_lb3.docx  Lapshov_Konstantin_lb4.docx  attribs  game.txt  main.cpp
seagame/: ability_builder.h  ability_factory.h  ability_interface.h  ability_manager.h  ability_name.h  ability_production.h  add_new_ability.h  double_damage.h  double_damage_builder.h  double_damage_factory.h  field_cell.h  game_field.h  out_of_bounds_error.h  point.h  random_shot.h  random_shot_builder.h  random_shot_factory.h  scanner.h  scanner_builder.h  scanner_factory.h  ship.h  ship_manager.h
seagame/src/: ability_manager.cpp  ability_production.cpp  add_new_ability.cpp  double_damage.cpp  double_damage_builder.cpp  double_damage_factory.cpp  game_field.cpp  random_shot.cpp  random_shot_builder.cpp  random_shot_factory.cpp  scanner.cpp  scanner_builder.cpp  scanner_factory.cpp  ship.cpp  ship_manager.cpp
seagame/src/abilities/core/: ability_info.h  ability_manager.cpp  ability_manager.h  ability_production.cpp  ability_production.h  add_new_ability.cpp  add_new_ability.h
seagame/src/abilities/effects/: double_damage.cpp  double_damage.h  random_shot.cpp  random_shot.h  scanner.cpp  scanner.h
seagame/src/abilities/errors/: ability_extract_error.h
seagame/src/abilities/factories/: double_damage_factory.cpp  double_damage_factory.h  random_shot_factory.cpp  random_shot_factory.h  scanner_factory.cpp  scanner_factory.h
seagame/src/abilities/interfaces/: ability_factory.h  ability_interface.h
seagame/src/common/: FileWrapper.cpp  FileWrapper.h  command.h
seagame/src/game/IOlogic/: cli_input.cpp  cli_input.h  cli_output.cpp  cli_output.h  commands.h  printer.cpp  printer.h
seagame/src/game/core/: game.cpp  game.h  game_controller.cpp  game_controller.h  game_field.cpp  game_field.h  game_save_loader.cpp  game_save_loader.h  game_state.cpp  game_state.h  ship.cpp  ship.h  ship_manager.cpp  ship_manager.h
seagame/src/game/errors/: out_of_bounds_error.h  place_error.h
seagame/src/game/utils/: field_cell.h
